# ripple_fluid_sim

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  justfile
cmake/: external.cmake  tooling.cmake
shaders/: fragment_shader.glsl  particle_fragment_shader.glsl  particle_vertex_shader.glsl  vertex_shader.glsl
src/: CMakeLists.txt  circle.cpp  circle.h  config.h.in  kernels.h  main.cpp  particle_renderer.cpp  particle_renderer.h  renderer.h  simulation.cpp  simulation.h
src/app/: app.cpp  app.hpp  main.cpp
src/engine/core/: input_manager.cpp  input_manager.hpp  window.cpp  window.hpp
src/engine/rendering/: camera.cpp  camera.hpp  particle.hpp  particle_renderer.cpp  particle_renderer.hpp  ui.cpp  ui.hpp
src/engine/simulation/: kernels.hpp  simulation.cpp  simulation.hpp
tests/: CMakeLists.txt  circles_stress_test.cpp  kernels_test.cpp  simulation_test.cpp
